--- a/Landon.Web/Views/Customers/Index.cshtml
+++ b/Landon.Web/Views/Customers/Index.cshtml
@@ -1,6 +1,6 @@
 @model IEnumerable<Customer>
 
-<table>
+<table class="table table-striped">
     <tr>
         <th>First Name</th>
         <th>Last Name</th>
@@ -15,9 +15,9 @@
         <td>@customer.LastName</td>
         <td>@customer.BirthDate</td>
         <td>
-            @* @Html.ActionLink("Modifier", "Edit", new { Id = customer.Id }) *@
-
-            <a asp-action="Edit" asp-route-id="@customer.Id">Modifier</a>
+            <a asp-action="Detail" asp-route-id="@customer.Id">
+                <i class="far fa-info-circle"></i>
+            </a>
         </td>
     </tr>
 }
