--- a/Landon.Web/Views/Shared/_Layout.cshtml
+++ b/Landon.Web/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Countries">
+                            <a class="nav-link" asp-controller="Countries" asp-action="Index">
                                 <i class="far fa-globe-europe"></i> Countries
                             </a>
                         </li>
@@ -38,7 +38,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="mt-3">
         <div class="container">
             <div class="row">
                 <div class="col-12">
